# teste_dataquality

./: .gitignore  .pre-commit-config.yaml  404.html  app.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  schema.py
.github/workflows/: ci.yml
docs/: index.md  p2-frontend.md  p3-backend.md  p4-test.md
p2-frontend/: index.html
p3-backend/: index.html
p4-test/: index.html
site/: 404.html  index.html
site/p2-frontend/: index.html
site/p3-backend/: index.html
site/p4-test/: index.html
site/search/: search_index.json
test/: __init__.py  test_app.py  test_schema.py
