[tool.poetry]
name = "dataquality-aovivo"
version = "0.1.0"
description = ""
authors = ["Luciano Borba <luhborbafilho@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.31.1"
black = "^24.2.0"
pydantic = {extras = ["email"], version = "^2.6.3"}
pandas = "^2.2.1"
isort = "^5.13.2"
pydocstyle = "^6.3.0"
taskipy = "^1.12.2"
pytest = "^8.1.1"
selenium = "^4.18.1"
pre-commit = "^3.7.0"
pip-audit = "^2.7.2"
mkdocs = "^1.5.3"
mkdocs-material = "^9.5.15"
mkdocstrings = {extras = ["python"], version = "^0.24.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
run = "streamlit run app.py"
format = "black . && isort ."
test = "pytest -v"